...
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

        <TextView
            android:id="@+id/tvWelcomeHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="30dp"
            android:text="TextView"
...
